# Rust-cola

./: .codeql  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  advanced_rule_implementation_plan.md  deny.toml  rust-toolchain.toml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: codeql-advanced.yml  codeql.yml  cola-ci.yml
cargo-cola/: Cargo.toml
cargo-cola/src/: main.rs  suppression.rs
cargo-cola/tests/: cli.rs
ci-test-crate/: Cargo.toml
ci-test-crate/src/: lib.rs
docs/: CURRENT-STATUS.md  GAP-ANALYSIS-RUST-SPECIFIC.md  HANDOFF-2024-12-18.md  HANDOFF-2025-11-26.md  PHASE1_PRIORITIES.md  PRODUCTION_RELEASE_PLAN.md  ROADMAP.md  ROADMAP_CONSIDERATIONS.md  RULES-IMPROVEMENT-PLAN.md  RULES_MASTER_PLAN.md  RULE_DEVELOPMENT_GUIDE.md  RUST-COLA-OVERVIEW.md  USER_GUIDE.md  V1X_ROADMAP.md  V1_0_SPRINT.md  WEEK1_PROGRESS.md  async-taint-fix.md  dangling-pointer-use-after-free-design.md  phase2-final-results.md  phase2-sanitization-progress.md  phase3-interprocedural-design.md  phase3-planning-summary.md  phase3.4-false-positive-reduction.md  phase3.5-roadmap.md  phase3.5.1-complete.md  phase3.5.1-results.md  phase3.5.2-mutable-ref-propagation-results.md  phase3.5.3-trait-dispatch-results.md  real-world-testing-influxdb.md  rules-cleanup.md  security-rule-backlog.md  tier3-phase1-complete.md  tier3-phase2-complete.md  tier3-phase2-progress.md  type-metadata-usage-guide.md  v1.0.1-rules-patch.md
docs/archive/: CURRENT-STATUS.md  FALSE_POSITIVE_ANALYSIS.md  GAP-ANALYSIS-RUST-SPECIFIC.md  HANDOFF-2025-12-11.md  PERFORMANCE.md  PRODUCTION_RELEASE_PLAN.md  PROJECT_REVIEW_AND_RECOMMENDATIONS.md  RULES-IMPROVEMENT-PLAN.md  RULES_MASTER_PLAN.md  RUSTCOLA017_UPGRADE.md  RUSTCOLA039-improvement.md  V1_0_SPRINT.md  WEEK1_PROGRESS.md  WEEK2_PROGRESS.md  WEEK3_PROGRESS.md  (+19 more)
examples/: cargo-cola.yaml
examples/sql-injection/: Cargo.toml
examples/sql-injection/src/: main.rs
examples/ssrf/: Cargo.toml
examples/ssrf/src/: main.rs
examples/tls-verification-disabled/: Cargo.toml
examples/tls-verification-disabled/src/: main.rs
examples/weak-ciphers/: Cargo.toml  README.md
examples/weak-ciphers/src/: lib.rs
mir-advanced-rules/: Cargo.toml
mir-extractor/: Cargo.toml  README.md  build.rs
mir-extractor/benches/: analysis_performance.rs
mir-extractor/examples/: test_cfg.rs  test_closure_path_analysis.rs  test_closure_registry.rs
mir-extractor/fixtures/: hir_spike_ice_args_2025-10-08.json
mir-extractor/src/: dataflow.rs  hir.rs  hir_query.rs  interprocedural.rs  lib.rs  main.rs  memory_profiler.rs  prototypes.rs  type_analyzer.rs
mir-extractor/src/dataflow/: cfg.rs  closure.rs  field.rs  path_sensitive.rs  taint.rs
mir-extractor/src/rules/: advanced_async.rs  advanced_input.rs  advanced_memory.rs  advanced_utils.rs  code_quality.rs  concurrency.rs  crypto.rs  ffi.rs  injection.rs  input.rs  memory.rs  mod.rs  resource.rs  supply_chain.rs  utils.rs  web.rs
mir-extractor/tests/: hir_smoke.rs  test_advanced_rules.rs  test_call_graph.rs  test_false_positives.rs  test_function_summaries.rs  test_new_rules_v084.rs  test_new_rules_v086.rs  test_new_rules_v087.rs  test_path_sensitive.rs  test_v101_sql_injection_fp.rs
mir_dump/: copy_overlap.rs  core.ops-function-FnMut-call_mut.1-1-000.MentionedItems.after.mir  core.ops-function-FnMut-call_mut.1-1-000.MentionedItems.before.mir  core.ops-function-FnMut-call_mut.1-1-001.AddMovesForPackedDrops.after.mir  core.ops-function-FnMut-call_mut.1-1-001.AddMovesForPackedDrops.before.mir  core.ops-function-FnMut-call_mut.1-1-002.Derefer.after.mir  core.ops-function-FnMut-call_mut.1-1-002.Derefer.before.mir  core.ops-function-FnMut-call_mut.1-1-003.RemoveNoopLandingPads.after.mir  core.ops-function-FnMut-call_mut.1-1-003.RemoveNoopLandingPads.before.mir  core.ops-function-FnMut-call_mut.1-1-004.SimplifyCfg-make_shim.after.mir  core.ops-function-FnMut-call_mut.1-1-004.SimplifyCfg-make_shim.before.mir  core.ops-function-FnMut-call_mut.1-1-005.InstSimplify-before-inline.after.mir  core.ops-function-FnMut-call_mut.1-1-005.InstSimplify-before-inline.before.mir  core.ops-function-FnMut-call_mut.1-1-006.ForceInline.after.mir  core.ops-function-FnMut-call_mut.1-1-006.ForceInline.before.mir  core.ops-function-FnMut-call_mut.1-1-007.AbortUnwindingCalls.after.mir  core.ops-function-FnMut-call_mut.1-1-007.AbortUnwindingCalls.before.mir  core.ops-function-FnMut-call_mut.1-1-008.AddCallGuards.after.mir  core.ops-function-FnMut-call_mut.1-1-008.AddCallGuards.before.mir  core.ops-function-FnMut-call_mut.3-3-000.runtime-optimized.after.mir  core.ops-function-FnOnce-call_once.1-1-002.Derefer.after.mir  core.ops-function-FnOnce-call_once.1-1-002.Derefer.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-000.MentionedItems.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-000.MentionedItems.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-001.AddMovesForPackedDrops.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-001.AddMovesForPackedDrops.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-002.Derefer.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-002.Derefer.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-003.RemoveNoopLandingPads.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-003.RemoveNoopLandingPads.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-004.SimplifyCfg-make_shim.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-004.SimplifyCfg-make_shim.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-005.InstSimplify-before-inline.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-005.InstSimplify-before-inline.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-006.ForceInline.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-006.ForceInline.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-007.AbortUnwindingCalls.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-007.AbortUnwindingCalls.before.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-008.AddCallGuards.after.mir  core.ptr-drop_in_place.Box_[i32]_.1-1-008.AddCallGuards.before.mir  (+4089 more)
tmp/: main_prev.rs
vscode-extension/: README.md  package.json  tsconfig.json
(+909 files in other folders)
