[workspace]
members = [
    "cargo-cola",
    "mir-extractor",
    "examples/simple",
    "examples/hir-typeck-repro",
    "examples/openoptions-truncate",
    "examples/allocator-mismatch-ffi",
    "examples/send-sync-bounds",
    "examples/packed-field-reference",
    "examples/cstring-pointer-use",
    "examples/blocking-sleep-async",
    "examples/unsafe-cstring-pointer",
    "examples/vec-set-len-misuse",
    "examples/hardcoded-crypto-keys",
    "examples/panic-in-drop",
    "examples/unwrap-in-poll",
]
resolver = "2"
