[workspace]
members = [
    "cargo-cola",
    "mir-extractor",
    "examples/simple",
    "examples/hir-typeck-repro",
    "examples/openoptions-truncate",
    "examples/allocator-mismatch-ffi",
    "examples/send-sync-bounds",
    "examples/packed-field-reference",
    "examples/cstring-pointer-use",
    "examples/blocking-sleep-async",
    "examples/unsafe-cstring-pointer",
    "examples/vec-set-len-misuse",
    "examples/hardcoded-crypto-keys",
    "examples/panic-in-drop",
    "examples/unwrap-in-poll",
    "examples/taint-tracking",
    "examples/parse-pattern-test",
    "examples/interprocedural",
    "examples/field-sensitive",
    "examples/untrusted-content-length",
    "examples/length-truncation-cast",
    "examples/tokio-broadcast-unsync",
    "examples/weak-ciphers",
    "examples/predictable-randomness",
    "examples/env-var-literal",
    "examples/invisible-unicode",
    "examples/crate-wide-allow",
    "examples/misordered-assert",
    "examples/try-io-result",
    "examples/local-refcell",
    "examples/untrimmed-stdin",
    "examples/infinite-iterator",
    "examples/unix-permissions",
    "examples/openoptions-flags",
    "examples/unnecessary-borrow-mut",
    "examples/absolute-path-join",
    "examples/ctor-dtor-std",
    "examples/connection-string-password",
    "examples/password-field-masking",
    "examples/weak-hashing-extended",
    "examples/null-pointer-transmute",
    "examples/zst-pointer-arithmetic",
    "examples/cleartext-env-var",
    "examples/modulo-bias-random",
    "examples/spawned-child-no-wait",
    "examples/hardcoded-home-paths",
    "examples/dead-stores-arrays",
    "examples/commented-code",
    "examples/overscoped-allow",
    "examples/cleartext-logging",
    "examples/log-injection",
    "examples/division-by-untrusted",
    "examples/maybeuninit-dataflow",
    "examples/regex-injection",
    "examples/unchecked-index",
    "examples/serde-length-mismatch",
    "examples/slice-element-mismatch",
    "examples/slice-from-raw-parts",
    "examples/tls-verification-disabled",
    "examples/aws-s3-unscoped",
    "examples/path-traversal",
    "examples/sql-injection",
    "examples/ssrf",
    "examples/yaml-deserialization",
    "examples/unbounded-read",
    "examples/json-toml-deserialization",
    "examples/blocking-in-async",
    "examples/mutex-guard-await",
]
resolver = "2"
