[package]
name = "cargo-cola"
version = "0.9.4"
edition = "2021"
authors = ["Opus-the-penguin"]

[features]
default = ["advanced-rules"]
hir-driver = ["mir-extractor/hir-driver"]
advanced-rules = ["dep:mir-advanced-rules"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mir-extractor = { path = "../mir-extractor" }
mir-advanced-rules = { path = "../mir-advanced-rules", optional = true }
cargo_metadata = "0.18"
reqwest = { version = "0.11", features = ["blocking", "json"] }
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
