[package]
name = "cargo-cola"
version = "1.0.0"
edition = "2021"
authors = ["Opus-the-penguin"]

[features]
default = []
hir-driver = ["mir-extractor/hir-driver"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
mir-extractor = { path = "../mir-extractor" }
cargo_metadata = "0.18"
reqwest = { version = "0.11", features = ["blocking", "json"] }
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
