[package]
name = "cargo-cola"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Security static analyzer for Rust. Analyzes MIR to detect vulnerabilities."
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["security", "static-analysis", "rust", "vulnerability", "sast"]
categories = ["development-tools", "command-line-utilities"]

[features]
default = []
hir-driver = ["mir-extractor/hir-driver"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
mir-extractor = { version = "1.0.1", path = "../mir-extractor" }
cargo_metadata = "0.18"
reqwest = { version = "0.11", features = ["blocking", "json"] }
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
