[package]
name = "mir-extractor"
version = "0.1.0"
edition = "2021"

[lib]
name = "mir_extractor"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.18"
serde_yaml = "0.9"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
semver = "1.0"

[dev-dependencies]
tempfile = "3"
