[package]
name = "mir-extractor"
version = "1.0.0"
edition = "2021"
authors = ["The Rust-cola Contributors"]
description = "MIR extraction and security rule engine for Rust-cola"
repository = "https://github.com/Opus-the-penguin/Rust-cola"
license = "MIT"
keywords = ["mir", "rust", "security", "static-analysis"]
categories = ["development-tools"]
build = "build.rs"

[features]
default = []
hir-driver = []

[lib]
name = "mir_extractor"
path = "src/lib.rs"

[[bin]]
name = "hir-spike"
path = "src/bin/hir_spike.rs"
required-features = ["hir-driver"]

[[bin]]
name = "hir-driver-wrapper"
path = "src/bin/hir_driver_wrapper.rs"
required-features = ["hir-driver"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.18"
serde_yaml = "0.9"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
sysinfo = "0.30"
semver = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "analysis_performance"
harness = false
