[package]
name = "ssrf"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
ureq = "2.9"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
url = "2.5"
