[package]
name = "tls-verification-disabled"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common TLS/HTTP libraries
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
hyper-tls = "0.6"
native-tls = "0.2"
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
